[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromorpho_api"
version = "0.2"
authors = [
    { name="Ross Barnowski", email="rossbar@caltech.edu" },
]
description = "Querying neuromorpho.org database with Python requests"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "urllib3",
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = [
    "neuromorpho.org",
    "neuromorpho API",
    "neuron",
]

[tool.setuptools]
zip-safe = false
include-package-data = false
packages = ['neuromorpho_api', 'neuromorpho_api.tests']

[tool.setuptools.package-data]
neuromorpho_api = ['tests/*.py']


[project.urls]
"Source Code" = "https://github.com/rossbar/neuromorpho-api"
Documentation = "https://neuromorpho-api.readthedocs.io/en/latest/"
"Issue Tracker" = "https://github.com/rossbar/neuromorpho-api/issues"
